--- a/src/Componend/Home/Header/Header.scss
+++ b/src/Componend/Home/Header/Header.scss
@@ -7,4 +7,17 @@ $image-url: url('../../../Resorce/images/Rectangle38.png');
     background-repeat: no-repeat;
     background-size: cover;
 }
-
+.headingText{
+  
+font-family: 'Poppins', sans-serif;
+font-size: 67;
+font-weight: 593;
+}
+.paragraphHeading{
+    font-family: 'Poppins', sans-serif!important;
+font-size: 45;
+font-weight: 100!important;
+}
+.headingMargin{
+    margin-top: 30%;
+}
