--- a/src/Componend/Home/Header/Header.css
+++ b/src/Componend/Home/Header/Header.css
@@ -5,4 +5,20 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+.headingText {
+  font-family: 'Poppins', sans-serif;
+  font-size: 67;
+  font-weight: 593;
+}
+
+.paragraphHeading {
+  font-family: "Poppins", sans-serif !important;
+  font-size: 45;
+  font-weight: 100 !important;
+}
+
+.headingMargin {
+  margin-top: 30%;
+}
 /*# sourceMappingURL=Header.css.map */
