--- a/src/Componend/Home/Header/Header.scss
+++ b/src/Componend/Home/Header/Header.scss
@@ -21,3 +21,11 @@ font-weight: 100!important;
 .headingMargin{
     margin-top: 30%;
 }
+.btn-custom{
+    width: 255 * 833;
+    height: 74 * 673;
+    margin-top: 3%;
+    background-color: #7ECC3C;
+    color: white;
+    font-family: 'Poppins'!important;
+}
