--- a/src/Componend/Home/Navbar/Navbar.css
+++ b/src/Componend/Home/Navbar/Navbar.css
@@ -1,1 +1,4 @@
-/* No CSS *//*# sourceMappingURL=Navbar.css.map */
+.navbar-container {
+  background-color: #7ECC3C;
+}
+/*# sourceMappingURL=Navbar.css.map */
