--- a/src/index.scss
+++ b/src/index.scss
@@ -28,6 +28,9 @@ body {
 p, a{
   font-family: 'Poppins-light', sans-serif;
 }
+p{
+  font-size: 17;
+}
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
