--- a/src/Componend/Home/Exemples/Examples.scss
+++ b/src/Componend/Home/Exemples/Examples.scss
@@ -19,8 +19,10 @@
 }
 h5{
     color: $white;
-    font-weight: bold;
+    font-weight: 500;
+    margin-bottom: 7%;
 }
 p{
     color: $white;
+    opacity: .5;
 }
