--- a/src/Componend/Home/Service/Service.scss
+++ b/src/Componend/Home/Service/Service.scss
@@ -4,7 +4,7 @@
     border-bottom: 3px solid $lime;
 }
 .detailsOfService{
-    color: #404748;
+    color: $dark;
 }
 .customText{
     text-decoration: to-upper-case($string: "");
